<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar_home"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/reportTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:textColor="@android:color/white"/>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/selectImageText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:text="@string/selectImageText"
            android:textColor="#000000"
            android:textSize="24sp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/imageHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            card_view:cardCornerRadius="12dp"
            card_view:cardElevation="20dp">

            <ImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:contentDescription="@string/userSelected" />

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/selectionButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/captureImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/round"
                android:layout_marginTop="20dp"
                android:padding="18dp"
                android:text="@string/capturePicture" />

            <Button
                android:id="@+id/selectFromStorage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/round"
                android:padding="18dp"
                android:layout_marginBottom="20dp"
                android:text="@string/selectFromStorage" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/processButtons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/cropImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/round"
                android:padding="18dp"
                android:text="@string/cropImage" />

            <Button
                android:id="@+id/processImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/round"
                android:padding="18dp"
                android:text="@string/processImage" />

            <Button
                android:id="@+id/clearAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/round"
                android:padding="18dp"
                android:text="@string/clear"
                android:layout_marginBottom="20dp" />
        </LinearLayout>

    </LinearLayout>

    </ScrollView>

</LinearLayout>